--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <div class="container">
 <div class="row">
 <div class="col-md-8 col-sm-12">
-<div class="banner-text"><h2 class="white">Hi, I'm Liam Morency</h2><p class="white">Digital Marketer | Designer | MSU Student</p><a class="btn btn-primary mt-3" href="#projects">View My Work</a></div>
+<div class="banner-text"><h2 class="white">Hi, I'm Luke Morency</h2>
+  <p class="white">Digital Marketer | Designer | MSU Student</p><a class="btn btn-primary mt-3" href="#projects">View My Work</a></div>
 </div>
 <div class="col-md-4 col-sm-12"> </div>
 </div>
