--- a/index.html
+++ b/index.html
@@ -15,19 +15,7 @@
 </link></head>
 <body>
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg">
-<div class="container"> <a class="navbar-brand navbar-logo" href="#"> <img alt="logo" class="logo-1" src="images/logo.png"/> </a>
-<button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button"> <span class="fas fa-bars"></span> </button>
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="navbar-nav ml-auto">
-<li class="nav-item"> <a class="nav-link" data-scroll-nav="0" href="">Home</a> </li>
-<li class="nav-item"> <a class="nav-link" data-scroll-nav="1" href="#">About</a> </li>
-<li class="nav-item"> <a class="nav-link" data-scroll-nav="2" href="#">CV</a> </li>
-<li class="nav-item"> <a class="nav-link" data-scroll-nav="6" href="#">Contact</a> </li>
-</ul>
-</div>
-</div>
-</nav>
+<nav class="navbar navbar-expand-lg"> </nav>
 <!-- End Navbar -->
 <!-------Banner Start------->
 <section class="banner" data-scroll-index="0">
