Added profile photo and updated about.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 <div class="row">
 <div class="col-md-8 col-sm-12">
 <div class="banner-text"><h2 class="white">Hi, I'm Luke Morency</h2>
-  <p class="white">Digital Marketer | Designer | MSU Student</p><a class="btn btn-primary mt-3" href="#projects">View My Work</a></div>
+  <p class="white">Designer | MSU Student</p>
+  <a class="btn btn-primary mt-3" href="#projects">View My Work</a></div>
 </div>
 <div class="col-md-4 col-sm-12"> </div>
 </div>
@@ -51,7 +52,7 @@
 <div class="sectioner-header text-center">
 <h3>About Me</h3>
 <span class="line"></span>
-<p>I’m a marketing student at MSU with a passion for digital design, SEO, and web development.</p>
+<p>My name is Luke Morency, Currently I am attending Michigan State University working on my Bachelor's of Information and Science degree. In my free time I enjoy listening to music, hanging out with friends, and running.&nbsp;</p>
 </div>
 </div>
 </section>
@@ -134,7 +135,7 @@
 <i class="fa fa-envelope media-left media-right-margin"></i>
 <div class="media-body">
 <p class="text-uppercase">E-mail</p>
-<p class="text-uppercase"><a class="text-white" href="mailto:yourname@email.com">yourname@email.com</a></p>
+<p class="text-uppercase"><a class="text-white" href="mailto:yourname@email.com">Lwmorency@gmail.com</a></p>
 </div>
 </div>
 <div class="contact-item media">
