--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <section class="container my-5">
   <div class="row">
     <div class="col-md-4">
-      <img src="images/profile.jpg" class="img-fluid rounded" alt="Photo of Luke Morency" />
+      <img src="Pictures/Luke.JPG" class="img-fluid rounded" alt="Photo of Luke Morency" />
     </div>
     <div class="col-md-8">
       <h2>Hi, I'm Luke Morency</h2>
