--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <ul class="navbar-nav ml-auto">
 <li class="nav-item"> <a class="nav-link" data-scroll-nav="0" href="">Home</a> </li>
 <li class="nav-item"> <a class="nav-link" href="about.html">About</a> </li>
-<li class="nav-item"> <a class="nav-link" data-scroll-nav="2" href="#">CV</a> </li>
+<li class="nav-item"> <a class="nav-link" href="LukeMorencyCV.pdf" target="_blank">CV</a> </li>
 <li class="nav-item"> <a class="nav-link" data-scroll-nav="6" href="#">Contact</a> </li>
 </ul>
 </div>
