--- a/about.html
+++ b/about.html
@@ -8,7 +8,19 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" />
 </head>
 <body>
-
+<nav class="navbar navbar-expand-lg">
+<div class="container">
+<button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button"> <span class="fas fa-bars"></span> </button>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="navbar-nav ml-auto">
+<li class="nav-item"> <a class="nav-link" data-scroll-nav="0" href="">Home</a> </li>
+<li class="nav-item"> <a class="nav-link" href="about.html">About</a> </li>
+<li class="nav-item"> <a class="nav-link" href="LukeMorencyCV.pdf" target="_blank">CV</a> </li>
+<li class="nav-item"> <a class="nav-link" data-scroll-nav="6" href="#">Contact</a> </li>
+</ul>
+</div>
+</div>
+</nav>
 <!-- Header -->
 <header class="text-center p-5 bg-primary text-white">
   <h1>About Me</h1>
