--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" />
 </head>
 <body>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg" style="background-color: #007bff;">
 <div class="container">
 <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button"> <span class="fas fa-bars"></span> </button>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -16,7 +16,7 @@
 <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
 <li class="nav-item"> <a class="nav-link" href="about.html">About</a> </li>
 <li class="nav-item"> <a class="nav-link" href="LukeMorencyCV.pdf" target="_blank">CV</a> </li>
-<li class="nav-item"> <a class="nav-link" data-scroll-nav="6" href="#">Contact</a> </li>
+<li class="nav-item"> <a class="nav-link" href="contact.html">Contact</a> </li>
 </ul>
 </div>
 </div>
