--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button"> <span class="fas fa-bars"></span> </button>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="navbar-nav ml-auto">
-<li class="nav-item"> <a class="nav-link" data-scroll-nav="0" href="">Home</a> </li>
+<li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
 <li class="nav-item"> <a class="nav-link" href="about.html">About</a> </li>
 <li class="nav-item"> <a class="nav-link" href="LukeMorencyCV.pdf" target="_blank">CV</a> </li>
-<li class="nav-item"> <a class="nav-link" data-scroll-nav="6" href="#">Contact</a> </li>
+<li class="nav-item"> <a class="nav-link" href="contact.html">Contact</a> </li>
 </ul>
 </div>
 </div>
