--- a/about.html
+++ b/about.html
@@ -40,9 +40,7 @@
         This page is where you can learn more about my background, skills, and future goals.
       </p>
       <p>
-        You can edit this page anytime to include details about your education, experience, and personal story.
-        Feel free to include hobbies, achievements, and anything that helps people understand who you are.
-      </p>
+      In my free time I enjoy working out, listening to music, cooking, and spending time with friends and family. I will be graduating from Michigan State University in Spring of 2026 with a Bachelors of Information and Science.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; </p>
     </div>
   </div>
 </section>
